2005-12-11  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/identifier.h :
	* lib/identifier.cpp :

	  - Changed type from unsigned int to unsigned char.

2005-12-10  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Merged with vlad-1_2_1

	* Makefile.in :

	  - updatetab.h is now a dependency of seqtab.h.

	* lib/seqtab.cpp :
	* lib/seqtab.h :

	  - The updateref::verify() function now takes a reference to update
	    table so that it can check if the name of the update reference is
	    actually in the update table and that the varlist matches the
	    entity list.

	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Cleanup.

	  - In the get() functions, precond and postcond expressions may now
	    be null.

	* lib/polbase.cpp :

	  - add_seqtab() is now passed the update table too for extra checking.

	* docs/bnf_policy.txt :
	* docs/langspecs.txt :

	  - "Ident Declaration" is now "Entity Declaration"

	* main/policy.l :
	* main/policy.y :

	  - Changed "ident" statement to "entity" statement.

	  - Entities and variables are now checked while parsing.

	* lib/identifier.h :
	* lib/identifier.cpp :

	  - Redefined macros in identifier.h. It now has provisions for typed
	    variables.

	  - Added a helper identifier class to validate identifiers.

	  - Entities are now strictly defined as strings that start with a
	    lowercase character and variables are now defined as strings that
	    start with 'S', 'A' or 'O'.

	* lib/fact.cpp :

	  - Use new identifier macros/functions.

	  - Reimplemented verify() functions to take advantage of the new typed
	    variables.

	* lib/mapper.cpp :
	* lib/polbase.cpp :
	* lib/symtab.cpp :

	  - Use new identifier macros/functions.

	* lib/varlist.cpp :
	* lib/varlist.h :

	  - Added a new add() function that validates variables using the new
	    identfier macros/functions before adding into the varlist.

	  - Removed vcopy(), as copy() calls the new add() function, which