@@ -5,6 +5,9 @@
 
 	  - Changed type from unsigned int to unsigned char.
 
+	  - Added a check_compat() function to check whether a given entity
+	    type is compatible for replacing a given variable.
+
 2005-12-10  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* Merged with vlad-1_2_1
